--- a/KRNL.WebMVC/Views/Cooperator/Delete.cshtml
+++ b/KRNL.WebMVC/Views/Cooperator/Delete.cshtml
@@ -4,12 +4,11 @@
     ViewBag.Title = "Delete";
 }
 
-<h2>Delete</h2>
+<h2>Delete Cooperator</h2>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>Are you sure you want to delete this Cooperator?</h3>
 <div>
-    <h4>CooperatorDetail</h4>
-    <hr />
+    <br />
     <dl class="dl-horizontal">
         <dt>
             @Html.DisplayNameFor(model => model.FirstName)
@@ -81,7 +80,7 @@
         @Html.AntiForgeryToken()
 
         <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
+            <input type="submit" value="Delete" class="btn btn-default" />
             @Html.ActionLink("Back to List", "Index")
         </div>
     }
