--- a/KRNL.WebMVC/Views/Cooperator/Details.cshtml
+++ b/KRNL.WebMVC/Views/Cooperator/Details.cshtml
@@ -4,11 +4,10 @@
     ViewBag.Title = "Details";
 }
 
-<h2>Details</h2>
+<h2>Cooperator Details</h2>
 
 <div>
-    <h4>CooperatorDetail</h4>
-    <hr />
+    <br />
     <dl class="dl-horizontal">
         <dt>
             @Html.DisplayNameFor(model => model.FirstName)
