--- a/KRNL.WebMVC/Views/Location/Index.cshtml
+++ b/KRNL.WebMVC/Views/Location/Index.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "Index";
 }
 
-<h2>Index</h2>
+<h2>Locations</h2>
 
 <p>
     @Html.ActionLink("Create New", "Create")
@@ -55,7 +55,7 @@
             </td>
             <td>
                 @Html.ActionLink("Edit", "Edit", new { id = item.LocationId }) |
-                @Html.ActionLink("Details", "Details", new { id = item.LocationId }) |
+                @Html.ActionLink("View", "Details", new { id = item.LocationId }) |
                 @Html.ActionLink("Delete", "Delete", new { id = item.LocationId })
             </td>
         </tr>
