--- a/KRNL.WebMVC/Views/Message/Details.cshtml
+++ b/KRNL.WebMVC/Views/Message/Details.cshtml
@@ -4,11 +4,10 @@
     ViewBag.Title = "Details";
 }
 
-<h2>Details</h2>
+<h2>Message</h2>
 
 <div>
-    <h4>MessageDetail</h4>
-    <hr />
+    <br />
     <dl class="dl-horizontal">
 
         <dt>
@@ -28,11 +27,11 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.LocationId)
+            @Html.DisplayNameFor(model => model.LocationCode)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.LocationId)
+            @Html.DisplayFor(model => model.LocationCode)
         </dd>
 
     </dl>
