--- a/KRNL.WebMVC/Views/Message/Index.cshtml
+++ b/KRNL.WebMVC/Views/Message/Index.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "Index";
 }
 
-<h2>Index</h2>
+<h2>Message Board</h2>
 
 <p>
     @Html.ActionLink("Create New", "Create")
@@ -18,7 +18,7 @@
             @Html.DisplayNameFor(model => model.DateCreated)
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.LocationId)
+            @Html.DisplayNameFor(model => model.LocationCode)
         </th>
         <th></th>
     </tr>
@@ -32,11 +32,11 @@
             @Html.DisplayFor(modelItem => item.DateCreated)
         </td>
         <td>
-            @Html.DisplayFor(modelItem => item.LocationId)
+            @Html.DisplayFor(modelItem => item.LocationCode)
         </td>
         <td>
             @Html.ActionLink("Edit", "Edit", new { id=item.MessageId }) |
-            @Html.ActionLink("Details", "Details", new { id=item.MessageId }) |
+            @Html.ActionLink("View", "Details", new { id=item.MessageId }) |
             @Html.ActionLink("Delete", "Delete", new { id=item.MessageId })
         </td>
     </tr>
