--- a/KRNL.WebMVC/Views/Cooperator/Edit.cshtml
+++ b/KRNL.WebMVC/Views/Cooperator/Edit.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "Edit";
 }
 
-<h2>Edit</h2>
+<h2>Edit Cooperator</h2>
 
 
 @using (Html.BeginForm())
@@ -12,8 +12,7 @@
     @Html.AntiForgeryToken()
     
 <div class="form-horizontal">
-    <h4>CooperatorEdit</h4>
-    <hr />
+    <br />
     @Html.ValidationSummary(true, "", new { @class = "text-danger" })
     @Html.HiddenFor(model => model.CooperatorId)
     @Html.HiddenFor(model => model.OwnerId)
