--- a/KRNL.WebMVC/Views/Home/Index.cshtml
+++ b/KRNL.WebMVC/Views/Home/Index.cshtml
@@ -2,30 +2,26 @@
     ViewBag.Title = "Home Page";
 }
 
-<div class="jumbotron">
-    <h1>ASP.NET</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
-    <p><a href="https://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
-</div>
+@*<img class="homescreen" src="/img/krnlProjectHome.png" />*@
 
 <div class="row">
     <div class="col-md-4">
-        <h2>Getting started</h2>
+        <h3>Yield Trial Location Management</h3>
         <p>
-            ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
-            enables a clean separation of concerns and gives you full control over markup
-            for enjoyable, agile development.
+            Manage all of your department's Yield Trial Locations in one convenient application.
+            Check the weather and GDU's before making a long drive, and use the Google Maps directions link to take you directly to the field.
         </p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
+        <p class="btn btn-default">@Html.ActionLink("LOCATIONS", "Index", "Location")</p>
     </div>
     <div class="col-md-4">
-        <h2>Get more libraries</h2>
-        <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
+        <h3>Message Board</h3>
+        <p>Check the message board for notes left on Yield Trial Locations that you may be traveling to in the future.
+        Is the field too muddy to walk through today? Make sure you communicate that to colleagues by leaving a message on the board - and don't forget to tag the location.</p>
+        <p class="btn btn-default">@Html.ActionLink("MESSAGES", "Index", "Message")</p>
     </div>
     <div class="col-md-4">
-        <h2>Web Hosting</h2>
-        <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
+        <h3>Cooperator Information</h3>
+        <p>Consolidate all your contact information for Cooperators in one convenient spot. In an unfamiliar location and don't have the Cooperator's phone number? Just check the KRNL app.</p>
+        <p class="btn btn-default">@Html.ActionLink("COOPERATORS", "Index", "Cooperator")</p>
     </div>
 </div>
