--- a/KRNL.WebMVC/Views/Location/Details.cshtml
+++ b/KRNL.WebMVC/Views/Location/Details.cshtml
@@ -4,19 +4,18 @@
     ViewBag.Title = "Details";
 }
 
-<h2>Details</h2>
+<h2>Location Details</h2>
 
 <div>
-    <h4>LocationDetail</h4>
-    <hr />
+    <br />
     <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.LocationId)
-        </dt>
+        @*<dt>
+                @Html.DisplayNameFor(model => model.LocationId)
+            </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.LocationId)
-        </dd>
+            <dd>
+                @Html.DisplayFor(model => model.LocationId)
+            </dd>*@
 
         <dt>
             @Html.DisplayNameFor(model => model.LocationName)
@@ -64,12 +63,16 @@
 
         <dd>
             @Html.DisplayFor(model => model.FullName)
+            @Html.ActionLink("VIEW", "Details", "Cooperator", new { id = Model.CooperatorId}, null)
         </dd>
 
     </dl>
 </div>
+<br />
+<a class="directions" href=@Model.MapLink target="_blank">Directions</a>
+<br />
+<br />
 <p>
     @Html.ActionLink("Edit", "Edit", new { id = Model.LocationId }) |
-    @Html.ActionLink("Back to List", "Index") | 
-    <a href=@Model.MapLink target="_blank">Directions</a>
+    @Html.ActionLink("Back to List", "Index")
 </p>
