--- a/KRNL.WebMVC/Views/Message/Edit.cshtml
+++ b/KRNL.WebMVC/Views/Message/Edit.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "Edit";
 }
 
-<h2>Edit</h2>
+<h2>Edit Message</h2>
 
 
 @using (Html.BeginForm())
@@ -12,8 +12,7 @@
     @Html.AntiForgeryToken()
     @Html.HiddenFor(model => model.MessageId)
     <div class="form-horizontal">
-        <h4>MessageEdit</h4>
-        <hr />
+        <br />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
 
         <div class="form-group">
