--- a/KRNL.WebMVC/Views/Shared/_Layout.cshtml
+++ b/KRNL.WebMVC/Views/Shared/_Layout.cshtml
@@ -18,21 +18,21 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                @Html.ActionLink("KRNL", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+                @*@Html.ActionLink("Home", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })*@
+                <img class="navbarLogo" src="/img/krnlTransparent.png" alt="KRNL">
 
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    @*<li><img src=@Url.Content("~../pics/corn.jpg") alt="KRNL"/></li>*@
-                    <li>@Html.ActionLink("Home", "Index", "Home")</li>
+                    <li>@Html.ActionLink("HOME", "Index", "Home")</li>
                     @if (User.Identity.IsAuthenticated)
                     {
-                        <li>@Html.ActionLink("Locations", "Index", "Location")</li>
-                        <li>@Html.ActionLink("Messages", "Index", "Message")</li>
-                        <li>@Html.ActionLink("Cooperators", "Index", "Cooperator")</li>
+                        <li>@Html.ActionLink("LOCATIONS", "Index", "Location")</li>
+                        <li>@Html.ActionLink("MESSAGES", "Index", "Message")</li>
+                        <li>@Html.ActionLink("COOPERATORS", "Index", "Cooperator")</li>
                     }
                     @*<li>@Html.ActionLink("About", "About", "Home")</li>
-                    <li>@Html.ActionLink("Contact", "Contact", "Home")</li>*@
+                        <li>@Html.ActionLink("Contact", "Contact", "Home")</li>*@
                 </ul>
                 @Html.Partial("_LoginPartial")
             </div>
@@ -41,11 +41,12 @@
     <div class="container body-content">
         @RenderBody()
         <hr />
+    <img class="navbarLogoFooter" src="/img/kernel.png" alt="KRNL">
         <footer>
-            <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
+
+            <p>&copy; @DateTime.Now.Year | Trevor R. Stuart</p>
         </footer>
     </div>
-
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
     @RenderSection("scripts", required: false)
