--- a/KRNL.WebMVC/Views/Location/Details.cshtml
+++ b/KRNL.WebMVC/Views/Location/Details.cshtml
@@ -63,7 +63,12 @@
 
         <dd>
             @Html.DisplayFor(model => model.FullName)
-            @Html.ActionLink("VIEW", "Details", "Cooperator", new { id = Model.CooperatorId}, null)
+
+            @if (Model.CooperatorId != null)
+            {
+                @Html.ActionLink("VIEW", "Details", "Cooperator", new { id = Model.CooperatorId }, null)
+            }
+
         </dd>
 
     </dl>
