--- a/KRNL.WebMVC/Views/WeatherJS.cshtml
+++ b/KRNL.WebMVC/Views/WeatherJS.cshtml
@@ -1,21 +1,21 @@
 ﻿
-@{
+@{ 
     ViewBag.Title = "WeatherJS";
 }
 
-<h2>WeatherJS</h2>
+<h2>Weather</h2>
 
 <p id="reply">
 
 </p>
-
-<button>Get Weather</button>
+<button>Get Forecast</button>
 
 <script>
     $(document).ready(function () {
-        $("button").click(function () { 
-            $.get("api.openweathermap.org/data/2.5/weather?lat={lat}&lon={lon}&APPID=3d849b6f1c5c4f4bef355f7bdddaa813&units=imperial", function (response) {
+        $("button").click(function () {
+            $.get("api.openweathermap.org/data/2.5/weather?zip=46032,us&APPID=3d849b6f1c5c4f4bef355f7bdddaa813", function (response) {
                 //response
+                $("reply").text(response.name);
             });
         });
     });
