--- a/KRNL.WebMVC/Views/Cooperator/Index.cshtml
+++ b/KRNL.WebMVC/Views/Cooperator/Index.cshtml
@@ -48,8 +48,8 @@
                 @Html.DisplayFor(modelItem => item.Email)
             </td>
             <td>
-                @Html.ActionLink("Details", "Details", new { id = item.CooperatorId }) |
-                @Html.ActionLink("Delete", "Delete", new { id = item.CooperatorId })
+                @*@Html.ActionLink("Details", "Details", new { id = item.CooperatorId }) |
+                @Html.ActionLink("Delete", "Delete", new { id = item.CooperatorId })*@
             </td>
         </tr>
     }
