--- a/KRNL.WebMVC/Views/Home/Index.cshtml
+++ b/KRNL.WebMVC/Views/Home/Index.cshtml
@@ -4,24 +4,15 @@
 
 @*<img class="homescreen" src="/img/krnlProjectHome.png" />*@
 
-<div class="row">
-    <div class="col-md-4">
-        <h3>Yield Trial Location Management</h3>
-        <p>
-            Manage all of your department's Yield Trial Locations in one convenient application.
-            Check the weather and GDU's before making a long drive, and use the Google Maps directions link to take you directly to the field.
-        </p>
-        <p class="btn btn-default">@Html.ActionLink("LOCATIONS", "Index", "Location")</p>
-    </div>
-    <div class="col-md-4">
-        <h3>Message Board</h3>
-        <p>Check the message board for notes left on Yield Trial Locations that you may be traveling to in the future.
-        Is the field too muddy to walk through today? Make sure you communicate that to colleagues by leaving a message on the board - and don't forget to tag the location.</p>
-        <p class="btn btn-default">@Html.ActionLink("MESSAGES", "Index", "Message")</p>
-    </div>
-    <div class="col-md-4">
-        <h3>Cooperator Information</h3>
-        <p>Consolidate all your contact information for Cooperators in one convenient spot. In an unfamiliar location and don't have the Cooperator's phone number? Just check the KRNL app.</p>
-        <p class="btn btn-default">@Html.ActionLink("COOPERATORS", "Index", "Cooperator")</p>
-    </div>
-</div>
+
+<img class="footerLogo" src="/img/krnlTransparent.png" alt="KRNL">
+<img class="footerLogo" src="/img/corn.png" alt="KRNL">
+
+<img class="footerLogo" src="/img/krnlTransparent.png" alt="KRNL">
+<img class="footerLogo" src="/img/corn.png" alt="KRNL">
+
+<img class="footerLogo" src="/img/krnlTransparent.png" alt="KRNL">
+<img class="footerLogo" src="/img/corn.png" alt="KRNL">
+<img class="footerLogo" src="/img/krnlTransparent.png" alt="KRNL">
+<img class="footerLogo" src="/img/krnlTransparent.png" alt="KRNL">
+
