--- a/KRNL.WebMVC/Views/Location/Edit.cshtml
+++ b/KRNL.WebMVC/Views/Location/Edit.cshtml
@@ -4,19 +4,36 @@
     ViewBag.Title = "Edit";
 }
 
-<h2>Edit</h2>
-
+<h2>Location</h2>
 
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
 
     <div class="form-horizontal">
-        <h4>LocationEdit</h4>
+        <h4>@Html.DisplayFor(model => model.LocationName)</h4>
+
+        @if (Model.CooperatorId != null)
+        {
+            <div>
+                @Html.DisplayFor(model => model.FullName)
+                @Html.ActionLink("VIEW", "Details", "Cooperator", new { id = Model.CooperatorId }, null) |
+                @Html.ActionLink("CHANGE", "EditCoop", new { id = Model.LocationId }, null)
+            </div>
+        }
+
+        @if (Model.CooperatorId == null)
+        {
+            <div>
+                @Html.ActionLink("Assign Cooperator", "EditCoop", new { id = Model.LocationId })
+            </div>
+        }
+
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
 
         @Html.HiddenFor(model => model.LocationId)
+        @Html.HiddenFor(model => model.CooperatorId)
 
         @*<div class="form-group">
                 @Html.LabelFor(model => model.LocationId, htmlAttributes: new { @class = "control-label col-md-2" })
@@ -25,6 +42,7 @@
                     @Html.ValidationMessageFor(model => model.LocationId, "", new { @class = "text-danger" })
                 </div>
             </div>*@
+
 
         <div class="form-group">
             @Html.LabelFor(model => model.LocationName, htmlAttributes: new { @class = "control-label col-md-2" })
@@ -97,14 +115,6 @@
                     @Html.EditorFor(model => model.IsStaked)
                     @Html.ValidationMessageFor(model => model.IsStaked, "", new { @class = "text-danger" })
                 </div>
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.CooperatorId, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.DropDownList("CooperatorId", new SelectList(ViewBag.cooperators, "CooperatorId", "FullName"), null, new { @class = "form-control" })
-                @Html.ValidationMessageFor(model => model.CooperatorId, "", new { @class = "text-danger" })
             </div>
         </div>
 
