--- a/KRNL.WebMVC/Views/Cooperator/Index.cshtml
+++ b/KRNL.WebMVC/Views/Cooperator/Index.cshtml
@@ -7,7 +7,7 @@
 <h2>Cooperators</h2>
 
 <p>
-    @Html.ActionLink("Create New", "Create")
+    @Html.ActionLink("Add Cooperator", "Create")
 </p>
 
 @using (Html.BeginForm())
