--- a/KRNL.WebMVC/Views/Location/Edit.cshtml
+++ b/KRNL.WebMVC/Views/Location/Edit.cshtml
@@ -11,13 +11,15 @@
     @Html.AntiForgeryToken()
 
     <div class="form-horizontal">
-        <h4>@Html.DisplayFor(model => model.LocationName)</h4>
+        <h4>
+            @Html.DisplayFor(model => model.LocationName)
+        </h4>
 
         @if (Model.CooperatorId != null)
         {
             <div>
                 @Html.DisplayFor(model => model.FullName)
-                @Html.ActionLink("VIEW", "Details", "Cooperator", new { id = Model.CooperatorId }, null) |
+                @Html.ActionLink("VIEW", "Edit", "Cooperator", new { id = Model.CooperatorId }, null) |
                 @Html.ActionLink("CHANGE", "EditCoop", new { id = Model.LocationId }, null)
             </div>
         }
@@ -27,6 +29,12 @@
             <div>
                 @Html.ActionLink("Assign Cooperator", "EditCoop", new { id = Model.LocationId })
             </div>
+        }
+
+        @if (Model.Latitude != 0 && Model.Longitude != 0)
+        {
+            <br />
+            <a class="btn btn-default" href=@Model.MapLink target="_blank">Directions</a>
         }
 
         <hr />
@@ -108,13 +116,21 @@
             </div>
         </div>
 
+        @*<div class="form-group">
+                @Html.LabelFor(model => model.IsStaked, htmlAttributes: new { @class = "control-label col-md-2" })
+                <div class="col-md-10">
+                    <div class="checkbox">
+                        @Html.EditorFor(model => model.IsStaked)
+                        @Html.ValidationMessageFor(model => model.IsStaked, "", new { @class = "text-danger" })
+                    </div>
+                </div>
+            </div>*@
+
         <div class="form-group">
             @Html.LabelFor(model => model.IsStaked, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                <div class="checkbox">
-                    @Html.EditorFor(model => model.IsStaked)
-                    @Html.ValidationMessageFor(model => model.IsStaked, "", new { @class = "text-danger" })
-                </div>
+            <div class="col-md-10 enumDropDown">
+                @Html.EnumDropDownListFor(model => model.IsStaked, new { @class = "form-control" })
+                @Html.ValidationMessageFor(model => model.IsStaked, "", new { @class = "text-danger" })
             </div>
         </div>
 
@@ -127,7 +143,7 @@
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("BACK", "Index")
 </div>
 
 @section Scripts {
