--- a/KRNL.WebMVC/Views/Location/EditCoop.cshtml
+++ b/KRNL.WebMVC/Views/Location/EditCoop.cshtml
@@ -30,6 +30,7 @@
     @Html.HiddenFor(model => model.IsStaked)
     @Html.HiddenFor(model => model.LocationId)
     @Html.HiddenFor(model => model.FullName)
+    @Html.HiddenFor(model => model.State)
 
     <div class="form-group">
         @Html.LabelFor(model => model.CooperatorId, htmlAttributes: new { @class = "control-label col-md-2" })
@@ -48,7 +49,7 @@
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Back to Locations", "Index")
 </div>
 
 @section Scripts {
